--- a/custom-definitions.tex
+++ b/custom-definitions.tex
@@ -51,9 +51,10 @@
 \def\join/{\vee}
 \def\bigjoin/{\bigvee}
 \def\compose/{\circ}
-\def\childOf/{\preccurlyeq}
-\def\childOfStrict/{\prec}
 \def\powerset/{\wp}
+
+\def\childOf/{\preccurlyeq}
+\def\strictChildOf/{\prec}
 
 \def\openTuple/{\langle}
 \def\closeTuple/{\rangle}
