--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,255 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for JT Paasch at 2026-01-01 21:59:10 -0500 
+%% Created for JT Paasch at 2026-02-06 22:50:48 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Svoboda:2012,
+	author = {Svoboda, David},
+	date-added = {2026-02-06 22:50:01 -0500},
+	date-modified = {2026-02-06 22:50:42 -0500},
+	journal = {The Thomist},
+	pages = {273--304},
+	title = {Thomas Aquinas on Whole and Part},
+	volume = {76},
+	year = {2012}}
+
+@book{Inman:2018,
+	address = {London},
+	author = {Inman, Ross},
+	date-added = {2026-02-06 22:38:50 -0500},
+	date-modified = {2026-02-06 22:39:56 -0500},
+	publisher = {Routledge},
+	title = {Substance and the Fundamentality of the Familiar: A Neo-Aristotelian Mereology},
+	year = {2018}}
+
+@inproceedings{Mormann:2009,
+	address = {London},
+	author = {Mormann, Thomas},
+	booktitle = {Proceedings of the XIII International Conference on Logic, Methodology, and Philosophy of Science, Beijing 2007 International Conference on Logic, Methodology and Philosophy of Science (Beijing 2007)},
+	date-added = {2026-02-06 22:02:08 -0500},
+	date-modified = {2026-02-06 22:04:56 -0500},
+	editor = {Glymour, C. and Wang, W. and Westerstahl, D.},
+	pages = {326--343},
+	publisher = {King's College Publications},
+	title = {Updating Classical Mereology},
+	year = {2009}}
+
+@article{Mormann:2010,
+	author = {Mormann, Thomas},
+	date-added = {2026-02-06 21:56:37 -0500},
+	date-modified = {2026-02-06 21:57:50 -0500},
+	journal = {Axiomathes},
+	pages = {209--227},
+	title = {Structural Universals as Structural Parts: Toward a General Theory of Parthood and Composition},
+	volume = {20},
+	year = {2010}}
+
+@article{Mormann:2012,
+	author = {Mormann, Thomas},
+	date-added = {2026-02-06 21:53:51 -0500},
+	date-modified = {2026-02-06 21:55:18 -0500},
+	journal = {Synthese},
+	pages = {403--418},
+	title = {On the Mereological Structure of Complex States of Affairs},
+	volume = {187},
+	year = {2012}}
+
+@article{Mormann:1995,
+	author = {Mormann, Thomas},
+	date-added = {2026-02-06 21:51:23 -0500},
+	date-modified = {2026-02-06 21:52:22 -0500},
+	journal = {Journal of Philosophical Logic},
+	pages = {129--150},
+	title = {Trope Sheaves: A Topological Ontology of Tropes},
+	volume = {3},
+	year = {1995}}
+
+@incollection{Dorr:2005,
+	address = {Oxford, UK},
+	author = {Dorr, Cian},
+	booktitle = {Fictionalism in Metaphysics},
+	date-added = {2026-02-06 21:38:57 -0500},
+	date-modified = {2026-02-06 21:40:35 -0500},
+	editor = {Kalderon, Mark Eli},
+	pages = {234--286},
+	publisher = {Clarendon Press},
+	title = {What We Argue About When We Argue About Metaphysics},
+	year = {2005}}
+
+@article{Forrest:2013,
+	author = {Forrest, Peter},
+	date-added = {2026-02-06 20:58:57 -0500},
+	date-modified = {2026-02-06 20:59:44 -0500},
+	journal = {Axiomathes},
+	pages = {323--341},
+	title = {Exemplification and Parthood},
+	volume = {23},
+	year = {2013}}
+
+@article{Hovda:2009,
+	author = {Hovda, Paul},
+	date-added = {2026-02-06 18:52:12 -0500},
+	date-modified = {2026-02-06 18:52:51 -0500},
+	journal = {Journal of Philosophical Logic},
+	pages = {55--82},
+	title = {What Is Classical Mereology?},
+	volume = {38},
+	year = {2009}}
+
+@incollection{Varzi:2014,
+	address = {Oxford, UK},
+	author = {Varzi, Achille},
+	booktitle = {Composition as Identity},
+	date-added = {2026-02-06 18:48:34 -0500},
+	date-modified = {2026-02-06 18:50:28 -0500},
+	editor = {Cotnoir, Aaron and Baxter, Donald},
+	pages = {47--69},
+	publisher = {Oxford University Press},
+	title = {Counting and Countenancing},
+	year = {2014}}
+
+@article{Sider:2003,
+	author = {Sider, Theodore},
+	date-added = {2026-02-06 18:45:22 -0500},
+	date-modified = {2026-02-06 18:46:00 -0500},
+	journal = {Philosophical Studies},
+	pages = {135--146},
+	title = {Against Vague Existence},
+	volume = {114},
+	year = {2003}}
+
+@article{Varzi:1996,
+	author = {Varzi, Achille},
+	date-added = {2026-02-06 18:36:02 -0500},
+	date-modified = {2026-02-06 18:37:04 -0500},
+	journal = {Data \& Knowledge Engineering},
+	pages = {259--286},
+	title = {Parts, Wholes, and Part-Whole Relations: The Prospects of Mereotopology},
+	volume = {20},
+	year = {1996}}
+
+@book{Sider:2001,
+	address = {Oxford, UK},
+	author = {Sider, Theodore},
+	date-added = {2026-02-06 14:40:19 -0500},
+	date-modified = {2026-02-06 14:41:15 -0500},
+	publisher = {Clarendon Press},
+	title = {Four-dimensionalism: An Ontology of Persistence and Time},
+	year = {2001}}
+
+@book{Koslicki:2008,
+	address = {Oxford, UK},
+	author = {Koslicki, Kathrin},
+	date-added = {2026-02-06 14:39:22 -0500},
+	date-modified = {2026-02-06 14:40:00 -0500},
+	publisher = {Oxford University Press},
+	title = {The Structure of Objects},
+	year = {2008}}
+
+@article{Smith:1996,
+	author = {Smith, Barry},
+	date-added = {2026-02-06 14:35:38 -0500},
+	date-modified = {2026-02-06 14:36:54 -0500},
+	journal = {Data \& Knowledge Engineering},
+	pages = {287--303},
+	title = {Mereotopology: A Theory of Parts and Boundaries},
+	volume = {20},
+	year = {1996}}
+
+@article{Clarke:1981,
+	author = {Clarke, Bowman},
+	date-added = {2026-02-06 14:33:23 -0500},
+	date-modified = {2026-02-06 14:34:13 -0500},
+	journal = {Notre Dame Journal of Formal Logic},
+	pages = {204--218},
+	title = {A Calculus of Individuals Based on `Connection' },
+	volume = {22},
+	year = {1981}}
+
+@article{Cotnoir:2015,
+	author = {Cotnoir, Aaron},
+	date-added = {2026-02-06 13:24:41 -0500},
+	date-modified = {2026-02-06 13:26:07 -0500},
+	journal = {Logic and Logical Philosophy},
+	pages = {429--447},
+	title = {Abelian Mereology},
+	volume = {24},
+	year = {2015}}
+
+@article{TarbouriechEtAl:2024,
+	author = {Tarbouriech, C\'{e}dric and Vieu, Laure and Barton, Adrien and Ethier, Jean-Fran\c{c}ois},
+	date-added = {2026-02-06 13:05:02 -0500},
+	date-modified = {2026-02-06 13:08:15 -0500},
+	journal = {Applied Ontology},
+	pages = {181--230},
+	title = {From Slot Mereology to a Mereology of Slots},
+	volume = {19},
+	year = {2024}}
+
+@article{Garbacz:2017,
+	author = {Garbacz, Pave\l{l}},
+	date-added = {2026-02-06 13:03:09 -0500},
+	date-modified = {2026-02-06 13:08:30 -0500},
+	journal = {Australasian Journal of Philosophy},
+	pages = {171--177},
+	title = {Slot Mereology Revised},
+	volume = {95},
+	year = {2017}}
+
+@article{Fisher:2013,
+	author = {Fisher, A.~R.~N.},
+	date-added = {2026-02-06 12:59:19 -0500},
+	date-modified = {2026-02-06 13:02:24 -0500},
+	journal = {Philosophia},
+	pages = {757--761},
+	title = {Bennett on Parts Twice Over},
+	volume = {41},
+	year = {2013}}
+
+@article{Fine:2010,
+	author = {Fine, Kit},
+	date-added = {2026-02-06 12:18:45 -0500},
+	date-modified = {2026-02-06 12:21:10 -0500},
+	journal = {Journal of Philosophy},
+	pages = {559--589},
+	title = {Towards a Theory of Part},
+	volume = {107},
+	year = {2010}}
+
+@article{Bennett:2013,
+	author = {Bennett, Karen},
+	date-added = {2026-02-06 11:51:17 -0500},
+	date-modified = {2026-02-06 11:52:02 -0500},
+	journal = {Australasian Journal of Philosophy},
+	pages = {83--103},
+	title = {Having a Part Twice Over},
+	volume = {91},
+	year = {2013}}
+
+@article{Fine:1999,
+	author = {Fine, Kit},
+	date-added = {2026-02-06 11:38:48 -0500},
+	date-modified = {2026-02-06 11:39:25 -0500},
+	journal = {Midwest Studies in Philosophy},
+	pages = {61--74},
+	title = {Things and Their Parts},
+	volume = {23},
+	year = {1999}}
+
+@article{Merricks:2005,
+	author = {Merricks, Trenton},
+	date-added = {2026-02-06 11:25:18 -0500},
+	date-modified = {2026-02-06 11:25:55 -0500},
+	journal = {Mind},
+	pages = {615--637},
+	title = {Composition and Vagueness},
+	volume = {114},
+	year = {2005}}
 
 @book{Bell:1988,
 	address = {Mineola, New York},
