--- a/submission-full.tex
+++ b/submission-full.tex
@@ -150,6 +150,7 @@ $^{2}$ \quad Affiliation 2; e-mail@e-mail.com}
 \input{section-2}
 \input{section-3}
 \input{section-4}
+\input{section-5}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
