--- a/section-1.tex
+++ b/section-1.tex
@@ -7,190 +7,39 @@
 
 % The introduction should briefly place the study in a broad context and highlight why it is important. It should define the purpose of the work and its significance. The current state of the research field should be reviewed carefully and key publications cited. Please highlight controversial and diverging hypotheses when necessary. Finally, briefly mention the main aim of the work and highlight the principal conclusions. As far as possible, please keep the introduction comprehensible to scientists outside your particular field of research. 
 
-Standard presentations of mereology tend to take what we might call a ``parts-first'' approach. You start by taking the parthood relation as primitive, and then you proceed by stipulating axioms that govern the relation. The goal is to choose your axioms well enough that the resulting models that satisfy your theory align nicely with the actual part-whole complexes that we encounter in the world around us. 
-
-By most standard accounts (e.g., \cite{Simons:1987}, \cite{Varzi:2011}, or \cite{CotnoirAndVarzi:2021}), partisans of the parts-first approach have more or less agreed on a common (minimal) ``core'' known as ``classical mereology.'' First, classicists adopt the following principles that govern the ordering of the parts:
-
-\begin{itemize}
-
-\item Parthood is reflexive, antisymmetric, and transitive (i.e., it is a partial order).
-
-\end{itemize}
-
 \noindent
-Second, classicists adopt the following decomposition principle that governs how wholes decompose:
+Classical mereology (\cite{Simons:1987}, \cite{Hovda:2009}, \cite{Varzi:2011}, \cite{CotnoirAndVarzi:2021}) is often developed in a parts-first manner. One begins by stipulating a primitive parthood relation and then one adopts a principle of unrestricted composition: for any selection of parts, there exists a fusion of exactly those parts.
 
-\begin{itemize}
+This leads to a large number of fusions. Not only do familiar entities such as Socrates count as fusions, but so do any arbitrary collection of parts. For instance, a pencil on a desk in the Boston Public Library together with a certain Highland Scotsman fuse into a whole. Or, to take one of Lewis's examples (\cite[p.~80]{Lewis:1991}, \cite[p.~48]{Varzi:2014}), there are trout-turkeys: their front halves are trout and their back halves are turkeys. Any selection of parts, however heterogeneous, fuses into a whole.
 
-\item Wholes decompose into more than one proper part (i.e., parthood obeys some form of so-called ``supplementation,'' ``remainder,'' or ``complementation'' principle which says that no whole consists of only a single proper part --- there must be some remainder or relative complement).
+Many find this result counterintuitive. Unrestricted composition appears to make no distinction between genuine unities and gerrymandered or ``mere Cambridge'' fusions. On the face of it, so the objection goes, Socrates seems to be a genuine fusion in a way that the pencil and the Scot --- or trout-turkeys --- are not.
 
-\end{itemize}
+As stated, this objection begs the question against the classical mereologist. To deny that the pencil and the Scot form a fusion is simply to reject unrestricted composition. From within the classical framework, there is no principled basis for excluding such cases.
 
-\noindent
-Third, classicists adopt the following principle that governs how parts fuse into wholes:
+Of course, there is more substantive debate about unrestricted composition (e.g., \cite{Dorr:2005}, \cite{Merricks:2005}, \cite{Koslicki:2008}, \cite{Sider:2003}). But that need not detain us. The persistence of the naive objection reveals a widely shared intuition that there is more to composition than the mere selection of parts. Genuine fusion seems to involve some form of connection or coherence: the constituents of a whole must be related in the right way, held or glued together rather than merely collected.
 
-\begin{itemize}
+This suggests a different methodological strategy. Instead of starting with a parthood relation and freely generating fusions, one might take a fusions-first approach: begin by stipulating which combinations of entities count as genuine fusions --- those in which appropriate gluing conditions are satisfied --- and then define parthood in terms of those fusions.
 
-\item Any collection of parts whatever forms a fusion (i.e. unrestricted fusion).
+To be sure, plenty of philosophers have taken a fusions-first approach by adopted some form or other of \emph{restricted} composition (e.g., \cite{VanInwagen:1990}, \cite{Fine:1999}, \cite{Fine:2010}, \cite{Forrest:2013}, \cite{Koslicki:2008}). But these approaches tend to proceed by developing a mereological theory from scratch.
 
-\end{itemize}
+From a mathematical perspective, sheaf theory (\cite{Tennison:1975}, \cite{Wedhorn:2016}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}) already provides a natural framework for articulating the idea. Central to sheaf theory is a precise notion of gluing: local pieces may be combined into a global whole only when they satisfy explicit compatibility conditions. The theory therefore already comes equipped with a principled account of when and how wholes are formed from parts.
 
-Classicists also require (either as an explicit axiom or as a consequence of the other axioms) some version of extensionality: \todo{consult Contoir's article on this and maybe cite it}
+Sheaf theory is well established in topology, algebraic geometry, and topos theory, but it has seen comparatively little use in philosophical mereology. This paper develops a sheaf-theoretic framework for modeling part-whole complexes. It is an honest fusions-first approach to mereology.
 
-\begin{itemize}
+The proposal has clear affinities with mereotopology (e.g. \cite{Clarke:1981}, \cite{Smith:1996}, \cite{Varzi:1996}, \cite{CasatiAndVarzi:1999}), which likewise aims to identify genuine fusions by articulating notions such as connection and continuity. Yet despite its openness to topological ideas, mereotopology has largely not drawn on the technical resources of sheaf theory. One aim of this paper is therefore to help bridge the gap between mathematical techniques that are well suited to modeling glued wholes and philosophical discussions of parthood and composition.
 
-\item If wholes have the same parts, then they're the same wholes.
+There is another, independent reason to adopt the sheaf-theoretic approach. Classical mereology treats the collection of available parts as having a rich algebraic structure --- typically something close to a Boolean algebra. At the same time, it draws ontological conclusions directly from that algebraic structure. For instance, consider the bottom element. Formally, this is very natural as the least element of a Boolean algebra, but many find it ontologically suspect. So, many classicists remove it from the algebra (as Tarski noticed long ago, \cite{Tarski:1986}, \cite{Tarski:1956}).
 
-\end{itemize}
+This reflects a deeper confusion between two distinct questions: what \emph{combinations} of parts are formally available within a parts-space, and which of those combinations are ontologically \emph{realized}. Classical mereology attempts to resolve ontological worries by altering the algebra itself, rather than by distinguishing the algebraic framework from the entities that inhabit it.
 
-With the above axioms fixed, the classicist can then define a number of other useful notions in the obvious ways, e.g.:
+The sheaf-theoretic framework avoids this confusion from the outset. The sheaf-theoretic approach requires that one first specify a background structure of parts --- a parts-space that determines all the ways in which regions or parts can combine. This structure is fixed independently of ontological considerations. Only once this background is in place does one specify which entities, if any, occupy the various part-locations. Some regions of the parts-space may be inhabited; others may remain empty. The absence of an occupant is an ontological fact, not a defect in the underlying algebra.
 
-\begin{itemize}
+In this respect, the framework separates possibility from actuality, and algebra from ontology. The parts-space records the space of possible decompositions and recombinations, while the sheaf data records how, and where, material or other entities are instantiated within that space. Ontological sparsity is expressed by empty fibers, not by removing elements from the algebra.
 
-\item Overlap and underlap
-\item Complement/difference
-\item Etc.
+A close relative is so-called slot mereology, which distinguishes between part ``slots'' and ``fillers'' (\cite{Bennett:2013}, \cite{Fisher:2013}, \cite{Cotnoir:2015}, \cite{Garbacz:2017}). In its original formulation, slot mereology requires only that the slots form a multiset. More recently, \cite{TarbouriechEtAl:2024} enriched the slots with further algebraic structure. Even so, this background structure is not equipped with a notion of covering, and thus does not by itself encode admissible decompositions. By contrast, the sheaf-theoretic approach already treats the background parts-space as a geometric \emph{space}, richly structured with algebraic combinations and coverings.
 
-\end{itemize}
+This bears on the relation between our approach and mereotopology too. Topological structure is often used in mereotopology to model spatial or material features. Sheaf theory accommodates such applications but is not limited to them. In our approach, we generalize beyond topological spaces and instead employ structures known as locales (\cite{Johnstone:1982}, \cite{Vickers:1989}, \cite{PicadoAndPultr:2012}, \cite[\S IX]{MacLaneAndMoerdijk:1994}, \cite[ch.~1]{Borceux:1994}). These are point-free spaces whose structure is given entirely by the lattice of their regions. Moreover, Alexander Grothendieck long ago generalized sheaf theory far beyond spatial settings. This makes sheaf theory well suited for modeling part-whole complexes that are not straightforwardly spatial or material, while still retaining a precise notion of gluing and coherence.
 
-At first sight, most of the classicist's principles can feel deeply intuitive. However, philosophers have objected to virtually all of them. Take for instance that parthood is transitive: if $x$ is a part of $y$ and $y$ is a part of $z$, then surely $x$ is a part of $z$. But there appear to be counter-examples. For example, my appendix is a part of me, and I am a member of the orchestra, but my appendix is not a member of the orchestra.
+The sheaf-theoretic approach is highly flexible. It provides a hierarchy of structures --- called presheaves, monopresheaves, and sheaves --- corresponding to increasingly strong requirements on how local pieces fit together. This allows part-whole complexes to be modeled more loosely or more strictly, depending on the phenomena at hand. As a result, the framework supports an intuitive mereology while not building in substantive principles such as extensionality or supplementation by default. These principles may be imposed when appropriate, but they are not forced by the formalism.
 
-A standard response is to point out that this sort of objection exploits an ambiguity: we utilize different, more specialized notions of ``parthood'' when we talk about the integration of the parts of biological organisms vs. those of orchestras. My appendix is a part of me under one description (as a part of a biological organism), while I am a part of the orchestra under another (as a member of a musical ensemble). 
-
-Defenders of the classical axioms have said that the fact that we can partition the general notion of parthood into more specialized versions only shows that the above axioms do in fact characterize a general notion of parthood, characterized precisely by the above classical notions. \addcite{Simons, Varzi, etc}
-
-However, one can't help but feel that there is something circular about this response, since it turns on the assumption that the different notions of functional unity are species (or determinations, or partitions, or what have you) of a more generic relation. But the existence of that generic relation hasn't been established, and there is no reason to think that mereological pluralism isn't correct --- namely, that there are many parthood relations, not one. \addcite{Fine, etc.}
-
-Another common objection to the classical approach revolves around composition principles. In particular, if we adopt unrestricted fusion, as the classical mereologist does, then we seem to get too many fusions. For instance, take the pencil on the table in front of me and your left knee. Are we really to believe that there is a fusion of that pencil and your left knee? Such a fusion would have two parts that live quite far apart (possibly even on different sides of the globe). 
-
-Defenders of the classical approach do have a response though: just because we may not have a word or concept that names the pencil+knee fusion, that doesn't mean it doesn't exist. \addcite{Varzi, etc.} Indeed, just as Moore attempt to show that extramental things exist by holding up his two hands and saying, ``Here is one hand, here is the other,'' so too might one try to show that the pencil+knee fusion exists by saying, ``there is the pencil, there is the knee.''
-
-Again though, one can't help but feel that there is something circular about this response. To appeal to the pencil+knee's fusion after its fused-ness has been questioned just brings the principle under scrutiny back into the mix. A better response would provide an independent reason to think that pencil+knee qualifies as more than a ``mere Cambridge'' fusion.
-
-Whether these objections/responses constitute any real conceptual clarification or are inexorably stuck in semantic circularities is not something we want to decide here. We mention these points only because they illustrate something else: they illustrate that we seem to have intuitions not just about parts, but also about fusions. In the two objections just mentioned, we seem to have certain conceptions of integrated fusions somewhere in the back of our minds, and those seem to be driving the objections. 
-
-For example, the reason it seems wrong to say my appendix is not part of the orchestra is because we seem to think that biological organisms are integrated in a different way than orchestras. Similarly, the reason we can so easily think that a pencil and a hand don't fuse is because they don't integrate in one of the ways that we ambiently accept as legitimate.
-
-That leads to the following question: if we have ambient intuitions about which collections count as fusions and which ones don't, then why not take a ``fusions-first'' approach to mereology? Instead of taking parthood as the primitive relation, and then try to work up to a notion of fusions, why not take fusions as the primitive relation, and then work backwards to parts?
-
-Such an approach is far less common in the technical mereological literature. That raises yet another question: why has the ``fusions-first'' approach been so neglected? One proposal is that it might seem to be too unwieldy. One might say that there are just too many different ways that things can integrate into wholes/fusions, and so it is a hopeless task to try and enumerate them and offer any sort of a unifying taxonomy. \addcite{Simons}.
-
-Another reason might be that such a view would be inelegant and perhaps would even fail to qualify as an ``explanation'' of the part-whole phenomenon altogether. If you ask me to explain why various $X$s seem to exhibit the same (or sufficiently similar) properties, it would be quite dissatisfying if I said, ``that's easy, there is no unifying explanation.'' 
-
-\todo{remove/rewrite these last two paragraphs.} The ``fusions-first'' approach is not so uncommon in the literature as I just made it out to be. Mereotopology exists as a branch of hereology, for all intensive purposes, precisely because it is the fusions-first response to the classical parts-first approach. Cite Casati and Varzi, chapter 3 and others.
-
-Fortunately, a ``fusions-first'' approach need not be as doomed as it may seem. In this paper, we claim that there is a satisfying ``fusions-first'' approach to mereology, and we present it in what follows. To accomplish this, we will build a bridge between category theory and philosophy. In particular, we will take well-known techniques used to manage the gluing-together of parts in algebraic geometry and topos theory, and we will apply those techniques to the realm of mereology.
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{From Parts to Sheaves}
-
-To begin, we want to suggest that it is useful to draw a distinction between what one might call the algebra of parts on the one hand, and the integrity or gluing-together of the parts on the other. To get a sense of what this distinction means, and why it is useful, fix a part-whole complex to analyze (a statue of Dion, let's say), and let an enumeration of its parts be given. The classical principle of unrestricted fusion says that any combination of those parts glues into a fusion. In essence, this generates all possible combinations of parts. As such, it nearly yields a complete lattice, with overlap and underlap serving as the meet and join operators. 
-
-However, it only \emph{nearly} yields a lattice because mereologists have been relunctant to allow a bottom element. Since mereologists are ontologists, they find a null element to be ontologically suspect. And indeed, what could an empty thing that is part of all other things possibly \emph{be}? So, instead of admitting it into their mereological systems, classical mereologists have simply omitted it altogether. David Lewis (\cite{Lewis:1991}) even went so far as to formulate a version of set theory that had no empty set.
-
-Yet despite their suspicion of a null element, classical mereologists have not shied away from allowing all possible fusions to exist, as noted already. Since the bottom element of a lattice is the empty join, we can put the point like this: classical mereologists are ontologically conservative about empty joins, and ontologically permissive about non-empty joins. As Tarski pointed out long ago, the principles of classical mereology thus yield a boolean algebra, with the bottom element removed \addcite{}.
-
-But it is difficult to see the motivation here. On the one hand, if you want to be ontologically conservative, then why allow so many fusions? If we are going to be suspicious of an empty join, then wouldn't we also be suspicious of the fusion of (say) Dion's left hand and right knee? Conversely, if we are happy to admit the existence of entities like the fusion of Dion's left hand and right knee, then why not an empty join? 
-
-One way to diagnose the problem is to say that we, as classical mereologists, have confused the algebra of parts with the integrity of the wholes. We have defined the algebra of parts in a combinatorial way, but then at the same time, we tried to make that algebra do ontological work. But this inevitably pulls us in two directions. So, we end up letting the algebraic aspects of our parthood relation do ontological work (creating any fusion whatever), until it goes too far (e.g. the null element), at which point we try to pull back on the ontological reigns.
-
-For another point of tension, consider extensionality. The classicist's axiom says if $x$ and $y$ have the same parts, then $x$ = $y$. This is ontologically conservative: ``no difference without a difference maker'' \addcite{Lewis}. However, this flattens all structure, and so it judges that ``tip'' and ``pit'' cannot be different words, since they have the same parts, after flattening. But that of course feels wrong. These two words have a different ordering of letters, so why would we neglect that in determining their identity? Here too we don't want the combinatorics to do any ontological work, even though we're happy to let the join operation freely generate entities.
-
-We can free ourselves from these sorts of tensions if we separate the algebra of parts from the integrity or gluing of the parts. Let us think of the lattice of parts merely as the abstract ``parts space,'' i.e., as the set of all \emph{possible} combinations of the given parts into larger pieces. Moreover, let us be clear that this does not do any ontological work. A ``parts space'' is just an abstract description of the various combinations of parts that could be. Think of it as a kind of mold that has slots that could be filled in with actual pieces. To specify an \emph{actual} part-whole complex that occupies that parts space, we need to take a second step and fill in certain of those slots with actual stuff, and specify which of those pieces glue together into bigger pieces. 
-
-Once we have made this distinction, we can let the algebra of parts be an algebra, and we can even allow a bottom element without worry. As a component of the abstract parts space, the bottom element is no more a real thing than the join of any other arbitrary regions of the parts space. At the same time, when we specify which pieces really occupy the parts space, we can be as ontologically conservative or as permissive as we like. We have the freedom to provide gluing conditions that are as fine-grained as we need. For instance, we can say that certain pieces glue together, while others do not (e.g., Dion's right knee glues directly to his right femur, but not directly to his left hand). Moreover, we can let the identity conditions be determined by the gluing conditions, and so maintain structured extensionality (a difference in fusions comes from different parts, or different gluings).
-
-Once we make the distinction between the background algebra of parts and the foreground integrity of the fusion, our task takes on a distinctive shape: now we find ourselves trying to coherently glue pieces together over an ambient space. And that is something known well to algebraic geometers and topos theorists: it is the task of constructing a sheaf over a space. For the algebraic geometer and topos theorist, sheaf theory provides a systematic framework for gluing together pieces over a space in such a way that the gluing is done coherently and consistently against the ambient structure of the underlying space. It stands to reason, then, that the mathematician's sheaf-theoretic techniques can be used profitably in mereology.
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{The Central Thesis}
-
-In this paper, we want to build a bridge between sheaf theory and mereology by importing some of those sheaf-theoretic techniques into the mereological setting. The central claim of this paper is thus: part-whole complexes can be usefully modeled as sheaves over locales. The key ideas are as follows:
-
-\begin{itemize}
-
-\item An algebra of parts tells us all the ways that parts can combine to form bigger wholes. In this sense, an algebra of parts generates the ambient ``parts space'' of an object, i.e. the abstract lattice-theoretic structure of \emph{possible} combinations. But not all possible combinations actually glue together to form \emph{actual} fusions. In many cases, we want to allow that only some of the parts glue together into an integrated whole/fusion. 
-
-\item So, we then require a separate step where we, the mereologists, have to ``fill in'' the abstract parts space with actual parts: we have to specify which bits of stuff fill in or occupy which slots in that ambient parts space, and we have to specify how those various bits of stuff glue together to form integrated fusions.
-
-\item It is tempting to try to model the ambient parts space as a topology. However, topologies have points, and it is not clear that all of the part-whole complexes that we might wish to consider are usefully modeled with points. This limitation is easy to overcome if we generalize and move to the point-free setting: instead of a topology, we choose to model the ambient parts space as a locale (a point-free generalization of a topology). 
-
-\item We use a sheaf to specify which bits of stuff inhabit an ambient locale and also to stipulate how those bits glue together. A sheaf is precisely an assignment of data to a topology or locale that coherently glues that data together. So, we choose to model the actual part-whole complex as a sheaf over the ambient locale. 
-
-\item To specify a part-whole complex, then, we (the mereologists) simply need to define a sheaf over the given locale. The ``data'' that we assign to the ambient locale are the bits of actual stuff that inhabit that parts space, and the gluing condition specifies how those pieces glue together.
-
-\item This yields a straightforward procedure that can be used to model any part-whole complex: first, specify the ambient locale, i.e., the abstract space of parts that the part-whole complex in question inhabits; second, fill in that ambient space with actual pieces and say how they glue together; third, let the sheaf framework do the rest of the work. Then the glued sections of the sheaf turn out to be the fusions, whose parts are the smaller sections each fusion is glued from. This is an honest ``fusions-first'' approach. 
-
-\end{itemize}
-
-\noindent
-There are two important benefits that come along for free when we take this approach.
-
-\begin{itemize}
-
-\item The sheaves over a locale form a topos. A topos is a special kind of category that you can do ``parts''-like logic in. Indeed, every topos comes equipped with just such an internal logic. It turns out that this internal logic corresponds exactly to the correct mereological logic that governs the part-whole complexes that can be formed over that locale. So, there is no need to manually create a mereological logic to reason about the part-whole complexes that occupy the ambient locale. We get that for free. 
-
-\item Modalities are natural operators that occur in sheaves, where they are easily defined and managed. These modalities interact correctly with the internal logic of the topos (and in fact are part of that internal logic). So we get mereological modalities for free too.
-
-\end{itemize}
-
-To our mind, the fact that these benefits come for free offers a compelling reason to adopt a sheaf-theoretic approach to part-whole complexes.
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Literature}
-
-The literature on mereology is vast. What we might think of as formal mereology (axiomatized systems) goes back at least to Le\'{s}niewski's system called ``Mereology'' [cite] and Leonard and Goodman's ``Calculus of Individuals'' (\cite{LeonardAndGoodman:1940} and \cite{Goodman:1977}), along with other contributions by Whitehead [cite], Tarski (\cite{Tarski:1986} and \cite{Tarski:1956}), Rescher (\cite{Rescher:1955}), and others. Surveys of the resulting literature and ideas can be found in the now standard works by Simons and others (e.g. \cite{Eberle:1970}, \cite{Simons:1987}, \cite{Varzi:2011}, or \cite{CotnoirAndVarzi:2021}).
-
-Topological concepts have been used in mereology for a long time (see the historical coverage and discussion in \cite{Simons:1987}). So-called ``mereotopology'' explicitly aims to characterize mereological questions in topological ways, especially using notions like boundaries, interiors, and connectedness. A standard introduction to modern mereotopology is \cite{CasatiAndVarzi:1999}.
-
-However, despite its heavy reliance on topology, mereotopology has not (to our knowledge) utilized sheaf-theory in any significant way (nor has classical mereology). \todo{discuss Spivak's behavioral mereology/temporal type theory} (\cite{FongMyersAndSpivak:2020}, \cite{SchultzAndSpivak:2019}), Moltmann's trope sheaves, Moltmann's mereology.
-
-For sheaves, see \cite{Tennison:1975}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}, or \cite{Wedhorn:2016}. For locales, see \cite{Johnstone:1982}, \cite{Vickers:1989}, \cite{Vickers:2007}, \cite{PicadoAndPultr:2012}.
-
-For toposes, see \cite{Goldblatt:1984}, \cite{McLarty:1992}, \cite{Borceux:1994}, \cite{MacLaneAndMoerdijk:1994}, \cite{LawvereAndSchanuel:1997}. \todo{discuss the idea of ``deriving'' the logic from the underlying structure, rather than ``inventing'' it axiomatically. Perhaps Moltmann's mereology is to be cited here.}
-
-\todo{discuss how mereological concepts are used in certain ``fusion-first'' approaches, e.g., Peter Simons and using ``connectedness.'' Discuss Van Inwagen's special composition question (\cite{VanInwagen:1990}).}
-
-\todo{discuss non-boolean approaches. Discuss boolean algebra stuff from Protow, the survey ``Logic in Heyting Algebras,''  Moltmann's Heyting mereology.}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Contributions}
-
-The contributions of this paper are as follows:
-
-\begin{itemize}
-
-\item We demonstrate a viable ``fusions-first'' approach to mereology.
-\item We separate the algebra of parts from the integrity of fusions.
-\item We build a bridge between mereological techniques of mathematics and philosophy. In particular:
-
-\begin{itemize}
-
-\item We utilize sheaves to systematically manage coherence and gluing over parts spaces.
-\item We acquire the correct mereological logics for free from the internal language of the underlying topos.
-
-\end{itemize}
-
-\end{itemize}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Plan of the Paper}
-
-The plan of this paper is as follows. 
-
-\begin{itemize}
-
-\item In \cref{sec:sheaf-theory}, we introduce the relevant parts of sheaf theory that will be used in the rest of the paper.
-
-\item In \cref{sec:sheaf-mereology}, we define part and whole in sheaf-theoretic terms, and we show how to model different kinds of part-whole complexes as sheaves. 
-
-\item In \cref{sec:modalities}, we show how mereological modalities arise naturally in sheaves.
-
-\item In \cref{sec:classical-mereology-in-sheaves}, we discuss what classical mereological notions look like in the sheaf-theoretic setting.
-
-\end{itemize}
+The plan of the paper is as follows. In \cref{sec:sheaf-theory}, we introduce the elements of sheaf theory needed for the remainder of the paper. We assume only familiarity with set-theoretic notation and first-order logic. No prior knowledge of topology or sheaf theory is required, and we provide worked examples to illustrate the core ideas. In \cref{sec:sheaf-mereology}, we demonstrate the flexibility of the framework by modeling a range of different part-whole complexes. In \cref{sec:classical-mereology}, we translate familiar mereological principles into the sheaf-theoretic setting, making explicit what those principles amount to within the framework. We conclude with a brief summary and discussion of directions for further work.
